# kafka-tracing-blog-post-example-code

./: Cargo.toml  README.md  docker-compose.yml
consumer/: Cargo.toml
consumer/src/: main.rs
producer/: Cargo.toml
producer/src/: hn.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
