[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"

opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-semantic-conventions = "0.10"
tokio = { version = "1.25.0", features = ["full"] }
opentelemetry-otlp = { version = "0.11.0", features=["http-proto"]}
shared = { path="../shared" }
serde_json = "1.0.94"
rdkafka = "0.29.0"
