[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
opentelemetry-semantic-conventions = "0.10"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
urlencoding = "2.1.2"
opentelemetry-otlp = { version = "0.11.0", features=["http-proto"]}
