[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry_api = "0.18.0"
serde = { version = "1.0.154", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
urlencoding = "2.1.2"
rdkafka = "0.29.0"
